proj1/tests/other-tests/MINZ_tests/error/fn_lambda.py
zero = lambda f: lambda x: x
one = lambda f: lambda x: f(x)
two = lambda f: lambda x: f(f(x))